--- a/main.html
+++ b/main.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Colored Paragraphs</title>
+    <style>
+        #yellow {
+            background-color: yellow;
+            border: 1px solid green;
+        }
+        #red {
+            background-color: red;
+            border: 1px solid black;
+        }
+        #green {
+            background-color: green;
+            border: 1px solid yellow;
+        }
+    </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <p id="yellow">This is a yellow paragraph.</p>
+    <p id="red">This is a red paragraph.</p>
+    <p id="green">This is a green paragraph.</p>
 </body>
-
 </html>
